# websearch_load_balance

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yaml
.github/workflows/: ci.yml  release.yml
docs/: mcp_sdk_research.md
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs
src/load_balancer/: manager.rs  mod.rs  strategy.rs
src/paper_load_balancer/: manager.rs  mod.rs
src/paper_providers/: arxiv.rs  biorxiv.rs  google_scholar.rs  medrxiv.rs  mod.rs  pmc.rs  pubmed.rs  sci_hub.rs  semantic.rs  trait_def.rs
src/providers/: anycrawl.rs  bocha.rs  brave.rs  firecrawl.rs  jina.rs  minimax.rs  mod.rs  serpapi.rs  serper.rs  tavily.rs  trait_def.rs  zhipu.rs
src/tools/: mod.rs  server.rs
test_output/: arxiv_fetch.json  arxiv_search.json  biorxiv_search_error.txt  google_scholar_search_error.txt  medrxiv_search_error.txt  pmc_fetch.json  pmc_search.txt  pubmed_fetch.json  pubmed_search.json  sci_hub_fetch_error.txt  sci_hub_search.txt  semantic_fetch_error.txt  semantic_search_error.txt
tests/: dump_provider_results.rs  http_mcp_test.rs
