[package]
name = "one_search"
version = "0.1.0"
edition = "2021"
description = "MCP server for web search load balancing across multiple providers"
authors = ["WebSearch Load Balance"]
license = "MIT"

[dependencies]
rmcp = { version = "1.4", features = ["server", "macros", "schemars", "transport-io", "transport-async-rw", "transport-streamable-http-server", "tower"] }
axum = "0.8"
http = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1"
async-trait = "0.1"
tokio-util = "0.7.18"

[profile.release]
opt-level = 3
lto = true

[dev-dependencies]
rmcp = { version = "1.4", features = ["client", "transport-streamable-http-client-reqwest"] }
